--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
       </div>
     </div>
 
+  <iframe src="https://calendar.google.com/calendar/embed?src=uw.edu_aenkesgb93k3502l6iujfm34no%40group.calendar.google.com&ctz=America/Los_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
   
   </body>
 </html>
