--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Ice2ocean by aaarendt</title>
+    <title>High Mountain Asia Team</title>
 </head>
 
 <body>
     <header>
         <div class="inner">
-            <h1>ice2ocean</h1>
-            <h2>Documentation for the ice2ocean database</h2>
-            <a href="https://github.com/aaarendt/ice2ocean" class="button"><small>View project on</small> GitHub</a>
+            <h1>High Mountain Asia Team</h1>
+            <h2>Planning Website</h2>
+            <a href="https://github.com/aaarendt/HiMAT" class="button"><small>View project on</small> GitHub</a>
         </div>
     </header>
 
@@ -31,78 +31,30 @@
                 <h3>
                     <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true">
                         <span aria-hidden="true" class="octicon octicon-link"></span>
-                    </a>Welcome to the ice2oceans database
+                    </a>Welcome to the High Mountain Asia Team Planning Website
 
                 </h3>
 
                 <p>
-                    <!--
-                     <img src="images/ice2ocean-science.png"
-                          alt="Microsoft Azure 4 Research"
-                          style="width:100px;height:80px;"
-                          align="left" vspace ="40">
-                     -->
-                    This page documents the ice2ocean database. Here you will find detailed descriptions of data tables
-                    and information on how to access the ice2oceans API.
+
+                    This page will be used to organize the activities of the High Mountain Asia Team (HiMAT)
                 </p>
+
 
                 <h3>
                     <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true">
                         <span aria-hidden="true" class="octicon octicon-link"></span>
                     </a>
-                    Database design
+                    Project Calendar
                 </h3>
+                <p> Click <a id="calendar" class="anchor" href="calendar.html"> here </a> to see the project calendar.</p>
 
-                <h3>
-                    <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true">
-                        <span aria-hidden="true" class="octicon octicon-link"></span>
-                    </a>
-                    Wolverine Glacier Project page
-                </h3>
-                <p> Click <a id="wolverine" class="anchor" href="javascripts/Wolverine_3D/Wolverine_3D.html"> here </a> to see Wolverine glacier in 3D!</p>
-
-
-                <h3>
-                    <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true">
-                        <span aria-hidden="true" class="octicon octicon-link"></span>
-                    </a>
-                    Upload data to AWS
-                </h3>
-                <p> Click <a id="aws" class="anchor" href="aws.html"> here </a> to upload your data to AWS S3.</p>
-
-                <h3>
-                    <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true">
-                        <span aria-hidden="true" class="octicon octicon-link"></span>
-                    </a>
-                    API access
-                </h3>
-
-                <p> Click <a id="i2o-api" class="anchor" href="api.html"> here </a> to access the ice2ocean API </p>
-
-                <h3>
-                    <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true">
-                        <span aria-hidden="true" class="octicon octicon-link"></span>
-                    </a>Authors and Contributors
-                </h3>
-
-                <p>
-                </p>
-
-                <h3>
-                    <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true">
-                        <span aria-hidden="true" class="octicon octicon-link"></span>
-                    </a>Support
-                </h3>
 
             </section>
             <aside id="sidebar">
 
-                <a href="http://aaarendt.github.io" class="button">
-                    my blog
-                </a>
-
                 <p class="repo-owner">
-                    <a href="https://github.com/aaarendt/ice2ocean">ice2ocean</a>
+                    <a href="https://github.com/aaarendt/ice2ocean">HiMAT</a>
                     is maintained by <a href="https://github.com/aaarendt">Anthony Arendt</a>.
                 </p>
 
@@ -112,21 +64,7 @@
                 </p>
             </aside>
 
-            <a href="http://ice.nasa.gov/NASAsRole/?CFID=11381944&CFTOKEN=10534028" class="anchor">
-                <img src="images/logos/nasa-logo.png" alt="NASA Cryospheric Sciences" style="width:70px;height:60px;">
-            </a>
-            <a href="http://research.microsoft.com/en-us/projects/azure/default.aspx" class="anchor">
-                <img src="images/logos/msr-logo.png" alt="Microsoft Azure 4 Research" style="width:130px;height:60px;">
-            </a>
-            <a href="https://csc.alaska.edu" class="anchor">
-                <img src="images/logos/akcsc-logo.png" alt="Alaska Climate Science Center" style="width:115px;height:60px;">
-            </a>
-            <a href="https://www.moore.org" class="anchor">
-                <img src="images/logos/moore-logo.png" alt="Gordon and Betty Moore Foundation" style="width:115px;height:60px;">
-            </a>
-            <a href="https://www.sloan.org" class="anchor">
-                <img src="images/logos/sloan-logo.png" alt="Alfred P. Sloan Foundation" style="width:60px;height:60px;">
-            </a>
+            
         </div>
     </div>
 
