--- a/calendar.html
+++ b/calendar.html
@@ -17,6 +17,18 @@
   </head>
 
   <body>
-      <iframe src="https://calendar.google.com/calendar/embed?src=uw.edu_aenkesgb93k3502l6iujfm34no%40group.calendar.google.com&ctz=America/Los_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-  </body>
+      <header>
+          <div class="inner">
+              <h1>High Mountain Asia Team</h1>
+              <h2>Planning Website</h2>
+              <a href="https://github.com/aaarendt/HiMAT" class="button"><small>View project on</small> GitHub</a>
+          </div>
+      </header>
+
+      <center>
+          <p> Click <a id="main" class="anchor" href="index.html"> here </a> to return to main page.</p>
+
+          <iframe src="https://calendar.google.com/calendar/embed?src=uw.edu_aenkesgb93k3502l6iujfm34no%40group.calendar.google.com&ctz=America/Los_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+      </center>
+   </body>
 </html>
