--- a/index.html
+++ b/index.html
@@ -29,19 +29,6 @@
         <div class="inner clearfix">
             <section id="main-content">
                 <h3>
-                    <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true">
-                        <span aria-hidden="true" class="octicon octicon-link"></span>
-                    </a>Welcome to the High Mountain Asia Team Planning Website
-
-                </h3>
-
-                <p>
-
-                    This page will be used to organize the activities of the High Mountain Asia Team (HiMAT)
-                </p>
-
-
-                <h3>
                     <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true">
                         <span aria-hidden="true" class="octicon octicon-link"></span>
                     </a>
@@ -49,6 +36,14 @@
                 </h3>
                 <p> Click <a id="calendar" class="anchor" href="calendar.html"> here </a> to see the project calendar.</p>
 
+                <h3>
+                    <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true">
+                        <span aria-hidden="true" class="octicon octicon-link"></span>
+                    </a>
+                    Regional Stakeholder Activities
+                </h3>
+                <p> Click <a id="calendar" class="anchor" href="stakeholders.html"> here </a> to see a list of upcoming workshops 
+                  and other activites related to water resources in the High Asia region.</p>
 
             </section>
             <aside id="sidebar">
