--- a/stakeholders.html
+++ b/stakeholders.html
@@ -28,7 +28,20 @@
       <center>
           <p> Click <a id="main" class="anchor" href="index.html"> here </a> to return to main page.</p>
 
-          <iframe src="https://calendar.google.com/calendar/embed?src=uw.edu_aenkesgb93k3502l6iujfm34no%40group.calendar.google.com&ctz=America/Los_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+          <h2>
+              <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true">
+                  <span aria-hidden="true" class="octicon octicon-link"></span>
+              </a>
+              Upcoming workshops and meetings
+          </h2>
+          <p>
+             <ul>
+                <li> &bull; <a id="conference" class="anchor" href="http://www.icbcl17.org">conference</a>
+                 on biodiversity, climate change assessment and impacts on livelihood. 
+                    10-12 January 2017, Kathmandu, Nepal.
+                </li>
+              </ul>
+          </p>
       </center>
    </body>
 </html>
