--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
                     <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true">
                         <span aria-hidden="true" class="octicon octicon-link"></span>
                     </a>
+                    HiMAT wiki page
+                </h3>
+                <p> Click <a id="calendar" class="anchor" href="https://github.com/aaarendt/HiMAT/wiki"> here </a> to see the team wiki page.</p>
+
+                
+
+                <h3>
+                    <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true">
+                        <span aria-hidden="true" class="octicon octicon-link"></span>
+                    </a>
                     Regional Stakeholder Activities
                 </h3>
                 <p> Click <a id="calendar" class="anchor" href="stakeholders.html"> here </a> to see a list of upcoming workshops 
