--- a/stakeholders.html
+++ b/stakeholders.html
@@ -41,6 +41,13 @@
                     10-12 January 2017, Kathmandu, Nepal.
                 </li>
               </ul>
+              <ul>
+                  <li>
+                      &bull; <a id="conference" class="anchor" href="http://www.tacsas.org">conference</a>
+                      on Technological Advances in Climate-Smart Agriculture and Sustainability, 
+                      16-18 January 2017 at Nanded, India.  
+                  </li>
+              </ul>
           </p>
       </center>
    </body>
