added HiMAT meeting

--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
                     <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true">
                         <span aria-hidden="true" class="octicon octicon-link"></span>
                     </a>
+                    Upcoming meetings
+                </h3>
+                <p>
+                    Click <a id="calendar" class="anchor" href="meeting.html"> here </a> to see details about upcoming HiMAT team meetings.
+                </p>
+
+                <h3>
+                    <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true">
+                        <span aria-hidden="true" class="octicon octicon-link"></span>
+                    </a>
                     Project Calendar
                 </h3>
                 <p> Click <a id="calendar" class="anchor" href="calendar.html"> here </a> to see the project calendar.</p>
@@ -42,18 +52,11 @@
                     </a>
                     HiMAT wiki page
                 </h3>
-                <p> Click <a id="calendar" class="anchor" href="https://github.com/aaarendt/HiMAT/wiki"> here </a> to see the team wiki page.</p>
+                <p> Click <a id="calendar" class="anchor" href="https://github.com/NASA-Planetary-Science/HiMAT/wiki"> here </a> to see the team wiki page.</p>
 
                 
 
-                <h3>
-                    <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true">
-                        <span aria-hidden="true" class="octicon octicon-link"></span>
-                    </a>
-                    Regional Stakeholder Activities
-                </h3>
-                <p> Click <a id="calendar" class="anchor" href="stakeholders.html"> here </a> to see a list of upcoming workshops 
-                  and other activites related to water resources in the High Asia region.</p>
+
 
             </section>
             <aside id="sidebar">
