--- a/meeting.html
+++ b/meeting.html
@@ -61,6 +61,9 @@
                   </li>
               </ul>
           </p>
+          <p>
+              <script src="http://bibbase.org/show?bib=https://github.com/aaarendt/HiMAT/blob/master/Bibliography/HiMAT.bib&jsonp=1"></script>
+         </p>
       </center>
    </body>
 </html>
