--- a/meeting.html
+++ b/meeting.html
@@ -62,7 +62,7 @@
               </ul>
           </p>
           <p>
-              <script src="http://bibbase.org/show?bib=HiMAT.bib&jsonp=1"></script>
+              <script src="http://bibbase.org/show?bib=[https://github.com/aaarendt/HiMAT/blob/master/Bibliography/HiMAT.bib]&jsonp=1"></script>
          </p>
       </center>
    </body>
