--- a/meeting.html
+++ b/meeting.html
@@ -12,7 +12,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-
+    <script src="http://bibbase.org/show?bib=https://github.com/aaarendt/HiMAT/blob/master/Bibliography/HiMAT.bib&jsonp=1"></script>
     <title>HiMAT by aaarendt</title>
   </head>
 
@@ -61,9 +61,6 @@
                   </li>
               </ul>
           </p>
-          <p>
-              <script src="http://bibbase.org/show?bib=[https://github.com/aaarendt/HiMAT/blob/master/Bibliography/HiMAT.bib]&jsonp=1"></script>
-         </p>
       </center>
    </body>
 </html>
