--- a/meeting.html
+++ b/meeting.html
@@ -12,7 +12,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <script src="http://bibbase.org/show?bib=https://github.com/aaarendt/HiMAT/blob/master/Bibliography/HiMAT.bib&jsonp=1"></script>
+
     <title>HiMAT by aaarendt</title>
   </head>
 
@@ -62,5 +62,8 @@
               </ul>
           </p>
       </center>
-   </body>
+
+      <script src="http://bibbase.org/show?bib=https://raw.githubusercontent.com/aaarendt/HiMAT/gh-pages/HiMAT.bib&jsonp=1"></script>
+      
+     </body>
 </html>
