--- a/meeting.html
+++ b/meeting.html
@@ -25,7 +25,6 @@
           </div>
       </header>
 
-      <script src="http://bibbase.org/show?bib=https://raw.githubusercontent.com/aaarendt/HiMAT/gh-pages/HiMAT.bib&jsonp=1"></script>
-      
+      <script src="https://bibbase.org/show?bib=https://bibbase.github.io/einstein.bib&jsonp=1"></script>
      </body>
 </html>
