--- a/meeting.html
+++ b/meeting.html
@@ -25,6 +25,7 @@
           </div>
       </header>
 
-      <script src="https://bibbase.org/show?bib=https://bibbase.github.io/einstein.bib&jsonp=1"></script>
+      <script src="http://bibbase.org/show?bib=https://aaarendt.github.io/HiMAT/HiMAT.bib&jsonp=1"></script>
+      
      </body>
 </html>
